Refactory and Clean in MasterPages

--- a/WebAPI/client-app/Views/assets/css/style.css
+++ b/WebAPI/client-app/Views/assets/css/style.css
@@ -59,24 +59,12 @@ data-table {
   margin: 0;
   padding: 0;
 }
-/*
-.json details>summary::after {
-  content: ':{}';
-  margin-left: 10px;
+table tr:first-child td button[data-action='moveUp'] {
+  display: none;
 }
-.json details[open]>summary::after {
-  content: '';
+.overflow-y-auto {
+  overflow-y: auto;
 }
-.json details[open]>summary>span::after {
-  content: ':';
-}
-.json details[open] menu::before {
-  content: '{';
-}
-.json details[open] menu::after{
-  content: '}';
-}
-*/
 /*Especial inputBox*/
 .inputBox{
   position:relative;
