--- a/WebAPI/client-app/Views/components/dialog-master-option.html
+++ b/WebAPI/client-app/Views/components/dialog-master-option.html
@@ -1,5 +1,5 @@
 <template id="dialog-option">
-  <form id="formMaster" class="card" method="dialog">
+  <form id="formMasterOption" class="card" method="dialog">
     <div class="card-header">
       <button type="button" class="btn btn-close btn-outline-danger float-end" data-target="close"></button>
       <div class="card-title"><i class="bi" style="font-size: 150%;"></i> Opciones de Maestro</div>
@@ -9,41 +9,23 @@
         <label for="name" class="input-group-text btn-secondary">Opcion</label>
         <input type="text" class="form-control" id="name" placeholder="Nombre" />
         <input type="text" class="form-control" id="value" placeholder="Valor" />
-        <button class="btn btn-success bi bi-plus" id="add" type="button"></button>
+        <button class="btn btn-success bi bi-plus" data-action="add" type="button"></button>
       </div>
       <div class="mt-3 overflow-y-auto" style="height: 380px;">
-        <style>
-          table#grid-option tr:first-child td button[data-action='moveUp'] {
-            display: none;
-          }
-
-          .overflow-y-auto {
-            overflow-y: auto;
-          }
-        </style>
-        <table id="grid-option" class="table table-white table-bordered mt-2" style="width: 98%;">
-          <thead class="table-light text-center">
-            <tr>
-              <th>Nombre</th>
-              <th>Valor</th>
-              <th style="width: 15%">Accion</th>
-            </tr>
-          </thead>
-          <template id="row">
-            <tr>
-              <td data-property="name"></td>
-              <td data-property="value"></td>
-              <td class="text-end">
-                <button type="button" title="Move Up" class="btn btn-outline-primary rounded-pill bi bi-arrow-up btn-sm"
-                  data-action="moveUp">
-                  <button type="button" title="Delete Option"
-                    class="btn btn-outline-primary rounded-pill bi bi-trash btn-sm" data-action="delete">
-                  </button>
-              </td>
-            </tr>
+        <data-table style="width: 98%;" 
+          :class-table="table table-white table-bordered mt-2"
+          :class-thead="table-light text-center">
+          <template>
+            <div slot="action" class="text-end">
+              <button type="button" title="Move Up" class="btn btn-outline-primary rounded-pill bi bi-arrow-up btn-sm"
+                data-action="moveUp"
+                data-value="${index}">
+                <button type="button" title="Delete Option"
+                  class="btn btn-outline-primary rounded-pill bi bi-trash btn-sm" data-action="delete" data-value="${index}">
+                </button>
+            </div>
           </template>
-          <tbody></tbody>
-        </table>
+        </data-table>
       </div>
     </div>
     <div class="card-footer text-end">
@@ -56,45 +38,48 @@
   import * as Enum from './Enum.js';
 
   export default class DialogMasterOption extends HTMLDialogElement {
+    header = [
+      { text: "Nombre", value: "name" },
+      { text: "Valor", value: "value", style: { width: "30%" } },
+      { text: "", value: "index", slot: "action", style: { width: "20%" } }
+    ]
     #info = {};
+
     constructor() {
       super();
     }
-
-    async connectedCallback() {
-      const clone = document.querySelector('#dialog-option').content.cloneNode(true);
+    connectedCallback() {
+      const clone = document.querySelector('#dialog-option')?.content.cloneNode(true);
       this.appendChild(clone);
-      const onCancel = this.eventCancel.bind(this);
+      const onClick = this.eventClick.bind(this);
       const onSave = this.eventSave.bind(this);
-      const onAdd = this.eventAdd.bind(this);
-
-      this.querySelectorAll('[data-target="close"]').forEach(btn => {
-        btn.addEventListener("click", onCancel);
-      });
-      this.querySelector("#save").addEventListener("click", onSave);
-      this.querySelector("#add").addEventListener("click", onAdd);
+      this.addEventListener("click", onClick);
+      this.form = this.querySelector("form")
+      this.form.addEventListener("submit", onSave);
+      this.dataTable = this.querySelector("data-table")
+      this.dataTable.setAttribute("header", JSON.stringify(this.header));
     }
 
     async openDialog(info) {
       this.showModal();
 
-      const icon = this.querySelector("div.card-title i.bi");
+      const icon = this.querySelector("div.card-title i");
       if (info.idMaster) {
         this.#info = info;
-        icon.classList.remove("bi-plus-circle");
-        icon.classList.add("bi-pencil-square");
+        icon.className = "bi bi-pencil-square";
       } else {
         this.#info = this.#defaultMaster();
-        icon.classList.remove("bi-pencil-square");
-        icon.classList.add("bi-plus-circle");
+        icon.className = "bi bi-plus-circle";
       }
-      this.#renderTable(this, this.#info.data);
+      this.#renderTable(this.#info.data);
     }
 
     eventSave(event) {
-      this.close(JSON.stringify(this.#info));
+      this.form.reset();
+      this.close(JSON.stringify(this.#info.data));
     }
     eventCancel(event) {
+      this.form.reset();
       this.close("");
     }
 
@@ -105,78 +90,66 @@
         "idOption": null,
         "name": this.querySelector("#name").value,
         "value": this.querySelector("#value").value,
-        "order": this.#info.data.length,
+        "place": this.#info.data.length,
         "status": Enum.status.Inserted
       }
+      this.form.reset();
       this.#info.data.push(item);
-      this.#renderTable(this, this.#info.data);
+      this.#renderTable(this.#info.data);
     }
 
-    eventClickBtn(event) {
-      const target = event.target;
-      if (target.tagName === "BUTTON") {
-        if (target.dataset.action == "delete") {
+    eventClick(event) {
+      const {tagName,dataset} = event.target;
+      if (tagName === "BUTTON") {
+        if (dataset.action == "delete") {
           this.eventDelete(event)
         }
-        if (target.dataset.action == "moveUp") {
+        if (dataset.action == "moveUp") {
           this.eventMove(event, -1)
+        }
+        if (dataset.action == "add") {
+          this.eventAdd(event)
+        }
+        if (dataset.target == "close") {
+          this.eventCancel(event)
         }
       }
     }
 
     eventDelete(event) {
-      const index = parseInt(event.target.parentNode.parentNode.dataset.value);
+      const index = parseInt(event.target.dataset.value);
       this.#info.data[index].status = Enum.status.Deleted;
-      this.#renderTable(this, this.#info.data);
+      this.#renderTable(this.#info.data);
     }
 
     eventMove(event, move) {
-
-      const index = parseInt(event.target.parentNode.parentNode.dataset.value);
-      this.#info.data[index + move].order = index;
-      this.#info.data[index].order = index + move;
+      const index = parseInt(event.target.dataset.value);
+      this.#info.data[index + move].place = index;
+      this.#info.data[index].place = index + move;
       this.#info.data[index].status = this.#info.data[index].status || Enum.status.Updated;
       this.#info.data[index + move].status = this.#info.data[index + move].status || Enum.status.Updated;
-      this.#info.data = this.#info.data.sort((a, b) => a.order - b.order);
-      this.#renderTable(this, this.#info.data);
-
+      this.#info.data = this.#info.data.sort((a, b) => a.place - b.place);
+      this.#renderTable(this.#info.data);
     }
 
     #defaultMaster() {
       return { idMaster: null, data: [], Updated: false };
     }
-
-    #renderTable(clone, list) {
-      const inner = clone.querySelector('table.table.table-white');
-      const tbody = inner.querySelector("tbody")
-      tbody.innerHTML = '';
-      const btnClick = this.eventClickBtn.bind(this);
+    #renderTable(data){
+      data.forEach((item,index)=>{
+        item.place = index+1
+        item.index = index
+      })
+      this.dataTable.setAttribute("items", JSON.stringify(data));
       const textClass = ['', 'text-primary', 'text-danger', 'text-success'];
-
-      list.forEach((item, index) => {
-        item.index = index + 1
-        const row = inner.querySelector("#row").content.cloneNode(true)
-        const tds = row.querySelectorAll("td[data-property]");
-
-        tds.forEach(td => {
-          let text = item[td.dataset.property];
-          if (td.dataset.function) {
-            const fn = new Function(td.dataset.property, `return ${td.dataset.function}`)
-            text = fn(text)
-          }
-          td.textContent = text||"";
-        })
-        let tr = row.querySelector("tr")
-        tr.dataset.value = index;
-        tr.addEventListener("click", btnClick);
-
-        if (item.status > Enum.status.None) {
-          tr.querySelectorAll("td").forEach(td=> td.classList.add(textClass[item.status]))
+      this.dataTable.querySelectorAll("tbody tr").forEach((tr, index) => {
+        const status = data[index]?.status || Enum.status.None
+        if (status > Enum.status.None) {
+          tr.querySelectorAll("td").forEach(td => td.classList.add(textClass[status]))
         }
-
-        tbody.appendChild(row);
       })
     }
   }
+
   window.customElements.define("dialog-master-option", DialogMasterOption, { extends: "dialog" });
 </script>
