Correccion de estiloy etiquetas  para algo mas semantico

--- a/WebAPI/client-app/Views/components/core/data-table.html
+++ b/WebAPI/client-app/Views/components/core/data-table.html
@@ -3,22 +3,22 @@
         #items = []
         #header = []
         constructor() {
-            super();
-            this.template = this.querySelector('template')?.content;
+            super()
+            this.template = this.querySelector('template')?.content
         }
         static get observedAttributes() {
-            return ['items', 'header'];
+            return ['items', 'header']
         }
         attributeChangedCallback(name, oldValue, newValue) {
             let table = this.querySelector('TABLE')
-            if (table) this.removeChild(table);
+            if (table) this.removeChild(table)
             if (name == 'header') {
-                this.#header = JSON.parse(newValue);
+                this.#header = JSON.parse(newValue)
             }
             if (name == 'items') {
-                this.#items = JSON.parse(newValue);
+                this.#items = JSON.parse(newValue)
             }
-            this.render();
+            this.render()
         }
         connectedCallback() {
             this.render()
@@ -27,51 +27,51 @@
             const thead = document.createElement('THEAD')
             const tr = thead.insertRow(-1)
             this.#header?.forEach(({ text, style, className }) => {
-                const th = document.createElement('TH');
-                th.textContent = text;
+                const th = document.createElement('TH')
+                th.textContent = text
                 if (style) {
                     Object.entries(style).forEach(([prop, val]) => {
                         th.style.setProperty(prop, val)
                     })
                 }
                 if (className) {
-                    th.className = className;
+                    th.className = className
                 }
-                tr.appendChild(th);
+                tr.appendChild(th)
             })
-            return thead;
+            return thead
         }
         createBody() {
-            const tbody = document.createElement('TBODY');
+            const tbody = document.createElement('TBODY')
             this.#items?.forEach(item => {
-                const tr = tbody.insertRow(-1);
+                const tr = tbody.insertRow(-1)
                 this.#header.forEach(head => {
-                    const { slot, value } = head;
-                    const td = tr.insertCell(-1);
+                    const { slot, value } = head
+                    const td = tr.insertCell(-1)
                     if (slot) {
                         let clone = this.template.cloneNode(true)
-                        clone = clone.querySelector(`[slot=${slot}]`);
+                        clone = clone.querySelector(`[slot=${slot}]`)
                         if (clone) {
                             clone.innerHTML = Object.replaceEntries(clone.innerHTML, item)
                             td.appendChild(clone)
                         }
                     } else {
-                        td.textContent = item[value];
+                        td.textContent = item[value]
                     }
                 })
             })
             if (!(this.#items?.length)) {
                 const tr = tbody.insertRow(-1)
-                const td = tr.insertCell(-1);
-                td.textContent = "No hay datos";
-                td.colSpan = this.#header.length ?? 1;
-                td.style.textAlign = "center";
+                const td = tr.insertCell(-1)
+                td.textContent = "No hay datos"
+                td.colSpan = this.#header.length ?? 1
+                td.style.textAlign = "center"
             }
             return tbody
         }
 
         render() {
-            const table = document.createElement('TABLE');
+            const table = document.createElement('TABLE')
             const thead = this.createHeader()
             const tbody = this.createBody()
 
@@ -88,6 +88,6 @@
             if (tbodyClass) tbody.className = tbodyClass
         }
     }
-    
-    window.customElements.define("data-table", DataTable);
+
+    window.customElements.define("data-table", DataTable)
 </script>
