--- a/WebAPI/client-app/Views/components/dialog-template-field.html
+++ b/WebAPI/client-app/Views/components/dialog-template-field.html
@@ -5,11 +5,11 @@
     }
   </style>
   <form id="formTemplate" class="card" method="dialog">
-    <div class="card-header">
+    <header class="card-header">
       <button type="button" class="btn btn-close btn-outline-danger float-end" data-target="close"></button>
-      <div class="card-title"><i class="bi" style="font-size: 150%;"></i> Campos de la Plantilla</div>
-    </div>
-    <div class="card-body">
+      <h3 class="card-title"><i class="bi" style="font-size: 150%;"></i> Campos de la Plantilla</h3>
+    </header>
+    <main class="card-body">
       <div class="input-group">
         <label for="name" class="input-group-text">Nombre</label>
         <input type="text" class="form-control" id="name" placeholder="Nombre" />
@@ -59,11 +59,11 @@
           </template>
         </data-table>
       </div>
-    </div>
-    <div class="card-footer text-end">
+    </main>
+    <footer class="card-footer text-end">
       <button class="btn btn-success me-2" id="save" type="submit"> Guardar</button>
       <button class="btn btn-secondary" data-target="close" id="cancel" type="reset"> Cancelar</button>
-    </div>
+    </footer>
   </form>
 </template>
 <script type="module">
